--- a/index.html
+++ b/index.html
@@ -1,1 +1,215 @@
-<h1>Test2</h1>
+<?php
+
+include("database_connection.php");
+include("stats_db-connect.php");
+session_start();
+include_once("error.php");
+maintenance();
+
+//Used for login redirect
+
+$_SESSION['current_page'] = $_SERVER['REQUEST_URI'];
+
+//
+
+$query = "SELECT * FROM GraphData as date ORDER BY Date";
+$result = mysqli_query($connect1, $query);
+$Members = '';
+$Servers = '';
+$Patterns = '';
+$TotalResponces = '';
+while($row = mysqli_fetch_array($result))
+{
+    $Members = $row['Members'];
+    $Servers = $row['Servers'];
+    $Patterns = $row['Patterns'];
+    $TotalResponces = $row['TotalResponses'];
+}
+
+?>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/now-ui-kit.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800&display=swap" rel="stylesheet">
+    <title>JarvisTheChatbot</title>
+</head>
+<body>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a href="#" class="navbar-brand">Jarvis</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+        <img src="images/icon-toggle.png">
+    </button>
+    <div class="collapse navbar-collapse" id="navbarMenu">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://discord.gg/ctHR9MT">Discord</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://jarvischatbot.xyz/vote">Vote</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://jarvischatbot.xyz/stats">Stats</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://jarvischatbot.xyz/feedback.php">Feedback</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://jarvischatbot.xyz/topservers">Servers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://jarvischatbot.xyz/updates">Changelogs</a>
+            </li>
+            <?php                  
+                if(isset($_SESSION['user_id']))
+                {
+                    $id = $_SESSION['discord_id'];
+                    $avatar = $_SESSION['avatar'];
+                    
+                    if($avatar == NULL)
+                    {
+                        $image = "https://discordapp.com/assets/322c936a8c8be1b803cd94861bdfa868.png"; 
+                    }
+                    else
+                    {
+                        $image = "https://cdn.discordapp.com/avatars/$id/$avatar.png?size=64";  
+                    }
+
+                    echo '
+                    <li style="align:right" class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img alt="Discord Profile Picture" style="width:30px;height:30px;border-radius:50%;" src="'.$image.'"> '.$_SESSION['username'].'
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="https://jarvischatbot.xyz/settings.php">Server Settings</a>
+                            ';
+
+                            if($_SESSION['verified'] == "[Moderator] ")
+                            {
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/admin">Admin Panel</a>';
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/council.php">Council Panel</a>';
+                            }
+                            else if($_SESSION['verified'] == "[Administrator] ")
+                            {
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/admin">Admin Panel</a>';
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/council.php">Council Panel</a>';
+                            }
+                            else if($_SESSION['verified'] == "[Developer] ")
+                            {
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/admin">Admin Panel</a>';
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/council.php">Council Panel</a>';
+                            }
+                            else if($_SESSION['rank'] == "council")
+                            {
+                                echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/council.php">Council Panel</a>';
+                            }
+
+                            echo '<a class="dropdown-item" href="https://jarvischatbot.xyz/user.php">User Panel</a>';
+                            
+                            echo '
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="https://jarvischatbot.xyz/logout.php">Logout</a>
+                        </div>
+                    </li>
+                    ';
+                }
+                else
+                {
+                    echo '<button onclick="window.location.href=`https://jarvischatbot.xyz/login.php?action=login`" class="btn btn-outline-secondary my-2 my-sm-0 btn-round btn-sm">LOGIN</button>';
+                }
+            ?>
+        </ul>
+    </div>
+</nav>
+<div class="heading text-center">
+    <h1 class="display-5 title">Ever wanted your own Discord Chatbot?</h1>
+    <p class="subtitle">Discord can be a lonely place, why not entertain your server by adding a virtual friend for all to use!</p>
+    <a class="btn btn-secondary btn-lg" href="https://jarvischatbot.xyz/invite" role="button">Invite Jarvis</a>
+    <br /><br /><br /><br /><br /><br />
+</div>
+<div class="features">
+    <div class="title">Features of Jarvis</div>
+    <div class="subtitle">Why Jarvis is the best chatbot there is to offer!</div>
+    <div class="cards">
+        <div class="card" style="width: 20rem;">
+            <div class="card-body">
+                <h5 class="card-title">Easy Setup</h5>
+                <p class="card-text">Simply invite the bot and run <b>!setup</b> for simple configuration options!</p>
+            </div>
+        </div>
+        <div class="card" style="width: 20rem;">
+            <div class="card-body">
+                <h5 class="card-title">Realistic</h5>
+                <p class="card-text">Jarvis has learned from thousands of users and tens of thousands of conversations!</p>
+            </div>
+        </div>
+    </div>
+		<div class="card" style="width: 20rem;">
+		<div class="card-body">
+			<h5 class="card-title">Moderated</h5>
+			<p class="card-text">Our staff team moderate responses regulary to ensure Jarvis remains suitable for all audiences!</p>
+		</div>
+	</div>
+	<div class="card" style="width: 20rem;">
+		<div class="card-body">
+			<h5 class="card-title">Advancing</h5>
+			<p class="card-text"><b>Every single conversation</b> with Jarvis is used to improve his responses, he gets smarter every day!</p>
+		</div>
+	</div>
+</div>
+<div class="statistics">
+    <div class="cards">
+		<div class="subtitle">Don't take our word for it though, check out these impressive stats:</div>
+        <div class="card statistic" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Active Users</h5>
+                <h1 style="font-weight: bold !important"><?php echo number_format($Members)."<br>"; ?></h1>
+            </div>
+        </div>
+        <div class="card statistic" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Servers</h5>
+                <h1 style="font-weight: bold !important"><?php echo number_format($Servers)."<br>"; ?></h1>
+            </div>
+        </div>
+        <div class="card statistic" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Patterns Created</h5>
+                <h1 style="font-weight: bold !important"><?php echo number_format($Patterns)."<br>"; ?></h1>
+            </div>
+        </div>
+        <div class="card statistic" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Todays Replies</h5>
+                <h1 style="font-weight: bold !important"><?php echo number_format($TotalResponces)."<br>"; ?></h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="start">
+    <div class="card">
+        <div class="card-body">
+            <div class="title">Feeling Sociable?</div>
+            <div class="subtitle">Let Jarvis onto your server and into your heart!</div>
+            <br />
+            <a class="btn btn-primary btn-lg" href="https://jarvischatbot.xyz/invite" role="button">Get started</a>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    Notice:<a href="privacy.pdf"> Jarvis Privacy Statement</a>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/now-ui-kit.min.js"></script>
+</body>
+</html>
