--- a/index.html
+++ b/index.html
@@ -10,28 +10,78 @@
     <title>Aquatic - CustomSkins</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">Jarvis</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"></button>
-    <div class="collapse navbar-collapse" id="navbarMenu">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<div class="heading text-center">
-    <h1 class="display-5 title">Fortnite Custom Skins</h1>
-    <br /><br /><br />
-</div>
 <div class="start">
+    <h1 style="color:white" class="display-5 title">Fortnite Custom Skins List</h1>
+    <hr style="height:10px;border-width:10;color:white;background-color:white">
+    <br />
     <div class="card">
         <div class="card-body">
-            <div class="title">Feeling Sociable?</div>
-            <div class="subtitle">Let Jarvis onto your server and into your heart!</div>
+            <div class="title">Here you can find a few custom skins created by me and the community!</div>
+            <div class="subtitle">These can be used in the lobby or as concepts, however they cannot be used in game as off yet due to the method being patched!</div>
             <br />
-            <a class="btn btn-primary btn-lg" href="https://jarvischatbot.xyz/invite" role="button">Get started</a>
+            <a class="btn btn-primary btn-lg" href="https://discord.gg/7WPctqq" role="button">Join The Discord</a><a class="btn btn-primary btn-lg" href="https://discord.gg/7WPctqq" role="button">Custom Skin Tutorial</a>
+        </div>
+    </div>
+    <hr style="height:10px;border-width:10;color:white;background-color:white">
+    <div class="features">
+        <div class="title">Skin List</div>
+        <div class="cards">
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Shinny Trooper</h5>
+                    <p class="card-text">This skin in a combination of the heist backbling and skin!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/40mwDOy.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Custom Example</h5>
+                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Custom Example</h5>
+                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Custom Example</h5>
+                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Custom Example</h5>
+                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Custom Example</h5>
+                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
+            <div class="card" style="width: 25rem; height: 30rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Custom Example</h5>
+                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
+                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
+                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
