--- a/index.html
+++ b/index.html
@@ -24,62 +24,60 @@
     </div>
     <hr style="height:10px;border-width:10;color:white;background-color:white">
     <div class="features">
-        <div class="title">Skin List</div>
+        <div class="title">Ubulk Skins</div>
         <div class="cards">
-            <div class="card" style="width: 25rem; height: 30rem;">
+            <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Shinny Trooper</h5>
-                    <p class="card-text">This skin in a combination of the heist backbling and skin!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/40mwDOy.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                    <h5 class="card-title">Adidas Ruby</h5>
+                    <p class="card-text">This skin created by AquaPlays makes an adidas branded ruby skin!</p>
+                    <p class="card-text">Skin Required - Ruby</p>
+                    <img style="height: 25rem; width: 25rem;" src="images/EQXpt29W4AgFmAa.jpg">     
+                    <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/AD_Ruby.rar" role="button" download>Download</a>
                 </div>
             </div>
-            <div class="card" style="width: 25rem; height: 30rem;">
+            <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Custom Example</h5>
-                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                    <h5 class="card-title">Spiderman</h5>
+                    <p class="card-text">This skin was created by CodCrafted and replaces the Carbide!</p>
+                    <p class="card-text">Skin Required - Carbide</p>
+                    <img style="height: 25rem; width: 25rem;" src="images/qagdnok9a5m11.jpg">
+                    <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/Spiderman.rar" role="button">Download</a>
                 </div>
             </div>
-            <div class="card" style="width: 25rem; height: 30rem;">
+            <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Custom Example</h5>
-                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                    <h5 class="card-title">Anime Iris</h5>
+                    <p class="card-text">This is a custom skin created by PS Ligar for the Iris Skin!</p>
+                    <p class="card-text">Skin Required - Iris</p>
+                    <img style="height: 25rem; width: 25rem;" src="images/unknown.png">
+                    <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/Anime_Iris.zip" role="button">Download</a>
                 </div>
             </div>
-            <div class="card" style="width: 25rem; height: 30rem;">
+        </div>
+        <div class="title">Mesh / Texture Skins</div>
+        <div class="cards">
+            <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Custom Example</h5>
-                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                    <h5 class="card-title">Galaxy Ikonik</h5>
+                    <p class="card-text">This skin replaces the Fire Valkyrie skin with Galaxy Ikonik !</p>
+                    <img style="height: 25rem; width: 25rem;" src="images/Annotation 2020-06-09 223523.png">     
+                    <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/GalaxyIkonik.rar" role="button" download>Download</a>
                 </div>
             </div>
-            <div class="card" style="width: 25rem; height: 30rem;">
+            <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Custom Example</h5>
-                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                    <h5 class="card-title">Animated Havoc</h5>
+                    <p class="card-text">This skin used the havoc skin and makes it Animated!</p>
+                    <img style="height: 25rem; width: 25rem;" src="images/Annotation 2020-06-09 223820.png">
+                    <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/Havoc.rar" role="button">Download</a>
                 </div>
             </div>
-            <div class="card" style="width: 25rem; height: 30rem;">
+            <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Custom Example</h5>
-                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
-                </div>
-            </div>
-            <div class="card" style="width: 25rem; height: 30rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Custom Example</h5>
-                    <p class="card-text">This skin is an example of a custom skin for fortnite!</p>
-                    <img style="height: 15rem; width: 15rem;" src="images/hidden.jpg">
-                    <a style="width: 15rem;" class="btn btn-primary btn-lg" href="https://" role="button">Download</a>
+                    <h5 class="card-title">Infinity Guard</h5>
+                    <p class="card-text">This skin chages the Honor Guard skin to be the Infinity Guard</p>
+                    <img style="height: 25rem; width: 25rem;" src="images/Annotation 2020-06-09 224132.png">
+                    <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/InfinityHonor.rar" role="button">Download</a>
                 </div>
             </div>
         </div>
