--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="card" style="width: 40rem; height: 40rem;">
                 <div class="card-body">
                     <h5 class="card-title">Anime Iris</h5>
-                    <p class="card-text">This is a custom skin created by PS Ligar for the Iris Skin!</p>
+                    <p class="card-text">This is a custom skin created by Kye for the Iris Skin!</p>
                     <p class="card-text">Skin Required - Iris</p>
                     <img style="height: 25rem; width: 25rem;" src="images/unknown.png">
                     <a style="width: 25rem;" class="btn btn-primary btn-lg" href="skins/Anime_Iris.zip" role="button">Download</a>
